# Ableton-Live-MCP

./: .gitignore  AGENTS.md  Package.swift  README.md  pyproject.toml  skills-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
RemoteScript/AbletonMCP/: __init__.py
Sources/AbletonMCP/: main.swift
Tests/: __init__.py  conftest.py  test_arrangement_handler.py  test_browser_handler.py  test_clip_handler.py  test_connection.py  test_device_handler.py  test_dispatcher.py  test_groove_handler.py  test_integration.py  test_mixer_handler.py  test_protocol.py  test_scene_handler.py  test_session_handler.py  test_setup.py  test_track_handler.py
Tests/tools/: test_arrangement.py  test_arrangement_notes.py  test_browser.py  test_clip.py  test_device.py  test_groove.py  test_mixer.py  test_scene.py  test_session.py  test_track.py
docs/: installation.md  market-research.md
docs/decisions/: 000-template.md  001-python-for-mcp-server.md  002-competitor-analysis-and-tool-roadmap.md
remote_script/AbletonLiveMCP/: __init__.py  dispatcher.py  tcp_server.py
remote_script/AbletonLiveMCP/handlers/: __init__.py  arrangement.py  base.py  browser.py  clip.py  device.py  groove.py  mixer.py  note_mixin.py  scene.py  session.py  track.py
src/mcp_ableton/: __init__.py  _app.py  connection.py  protocol.py  server.py  setup.py
src/mcp_ableton/tools/: __init__.py  arrangement.py  browser.py  clip.py  device.py  groove.py  mixer.py  scene.py  session.py  track.py
