[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ableton"
version = "0.1.0"
description = "Control Ableton Live programmatically through AI assistants using MCP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "pydantic",
]

[project.scripts]
mcp-ableton = "mcp_ableton.server:main"
mcp-ableton-setup = "mcp_ableton.setup:main"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ableton"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "mcp_ableton.tools.*"
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["Tests"]
